syntax = "proto3";

package graph;
option go_package="github.com/ilnar/wf/gen/pb/graph";

import "google/protobuf/duration.proto";

message TransitionCondition {
    string operation_result = 1;
}

message Operation {
    google.protobuf.Duration timeout = 1;
}

message Node {
    string id = 1;
    string name = 2;
    Operation op = 3;
}

message Edge {
    string from_id = 1;
    string to_id = 2;
    TransitionCondition condition = 3;
}

message Graph {
    string start = 1;
    repeated Node nodes = 2;
    repeated Edge edges = 3;
}